# GameEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/dependencies/: CMakeLists.txt  ImGuiCmakeLists.cmake
engine/dependencies/glad/: CMakeLists.txt
engine/dependencies/glad/src/: glad.c
engine/dependencies/imgui/: imgui.cpp  imgui.h
engine/dependencies/stb/: CMakeLists.txt
engine/dependencies/stb/source/: stb_image.c
engine/dependencies/zlib/: CMakeLists.txt  changes.txt
engine/editor/: CMakeLists.txt  editor.cpp  editor.hpp  editor_events.cpp  editor_events.hpp  editor_main.cpp  editor_main.hpp  editor_preferences.cpp  editor_preferences.hpp  editor_subsystem_forward_declarations.hpp  editor_subsystem_fwd.hpp  editor_window.cpp  editor_window.hpp  editor_window.ui  imgui_renderer.cpp  imgui_renderer.hpp  main.cpp  user_input_filter.cpp  user_input_filter.hpp
engine/editor/asset_importer/private/: CMakeLists.txt  asset_importer.cpp
engine/editor/asset_importer/public/: CMakeLists.txt  asset_importer.hpp
engine/editor/content_browser/private/: CMakeLists.txt  asset_guid.cpp  asset_importing.cpp  postprocess.hpp
engine/editor/content_browser/public/: CMakeLists.txt  asset_guid.hpp  asset_importing.hpp  postprocess.hpp
engine/editor/editor/private/: CMakeLists.txt  editor.cpp  editor.hpp  editor_preferences.cpp  editor_preferences.hpp
engine/editor/editor/public/: CMakeLists.txt
engine/editor/imgui/private/: CMakeLists.txt  imgui.cpp
engine/editor/imgui/public/: CMakeLists.txt  imgui.hpp
engine/editor/level_editor/private/: CMakeLists.txt  gizmo.cpp  gizmo_context.cpp  gizmo_internal.hpp  viewport.cpp  viewport_camera.cpp  viewport_camera.hpp
engine/editor/level_editor/public/: CMakeLists.txt  gizmo.hpp  gizmo_context.hpp  viewport.hpp  viewport_camera.hpp
engine/editor/leveleditor/private/: CMakeLists.txt  gizmo.cpp  gizmo_internal.hpp  level_editor.cpp
engine/editor/leveleditor/public/: CMakeLists.txt  gizmo.hpp  level_editor.hpp
engine/editor/log_viewer/private/: log_viewer.cpp
engine/editor/log_viewer/public/: CMakeLists.txt  log_viewer.hpp
engine/editor/misc/private/: CMakeLists.txt  qt_key.cpp
engine/editor/misc/public/: CMakeLists.txt  qt_key.hpp
engine/editor/outliner/private/: CMakeLists.txt  outliner.cpp  outliner_entity_list.cpp  outliner_item.cpp
engine/editor/outliner/public/: CMakeLists.txt  outliner.hpp  outliner_entity_list.hpp  outliner_header.hpp  outliner_item.hpp
engine/editor/private/: editor.cpp  editor.hpp  editor_preferences.hpp  editor_window.cpp  editor_window.hpp
engine/editor/private/content_browser/: asset_guid.cpp  asset_importing.cpp
engine/editor/private/imgui/: imgui.cpp
engine/editor/private/level_editor/: gizmo_context.cpp  viewport.cpp  viewport_camera.cpp
engine/editor/private/log_viewer/: CMakeLists.txt  log_viewer.cpp
engine/editor/private/outliner/: outliner.cpp  outliner_item.cpp
engine/editor/private/rendering/: imgui_rendering.cpp
engine/editor/public/content_browser/: asset_guid.hpp  asset_importing.hpp  postprocess.hpp
engine/editor/public/imgui/: imgui.hpp
engine/editor/public/level_editor/: gizmo_context.hpp  viewport.hpp  viewport_camera.hpp
engine/editor/public/log_viewer/: log_viewer.hpp
engine/editor/public/outliner/: CMakeLists.txt  outliner.hpp  outliner_header.hpp  outliner_item.hpp
engine/editor/public/rendering/: builtin_editor_shaders.hpp  imgui_rendering.hpp
engine/editor/rendering/private/: CMakeLists.txt  (+1 more)
engine/private/core/: json.cpp  logging.cpp  paths_internal.hpp  random.cpp  threads.cpp
engine/private/engine/: assets.cpp  key.cpp  time.cpp
engine/private/physics/: line.cpp  obb.cpp
engine/private/rendering/: fonts.cpp  framebuffer.cpp  opengl.cpp  renderer.cpp  texture_format.hpp
engine/private/scripts/: camera_movement.cpp
engine/private/shaders/: builtin_shaders.cpp  shader.cpp  shader_exceptions.cpp
engine/private/windowing/: window.hpp
engine/public/: engine.cpp  engine.hpp  main.cpp  module_loader.cpp  module_loader.hpp
engine/public/core/: class_macros.hpp  color.hpp  diagnostic_macros.hpp  exception.hpp  json.hpp  paths.hpp  random.hpp
engine/public/engine/: assets.hpp  key.hpp  material.hpp  mesh.hpp  resource_manager.hpp
engine/public/physics/: line.hpp  obb.hpp  ray.hpp
engine/public/rendering/: fonts.hpp  framebuffer.hpp  opengl.hpp  opengl_enums_undefs.hpp
engine/public/scripts/: camera_movement.hpp
engine/public/shaders/: builtin_shaders.hpp  shader_exceptions.hpp  shader_stage.hpp
engine/shaders/: CMakeLists.txt  asteroid.frag  basicfrag.1.frag  basicfrag.frag  basicvertex.vert  deferred_shading.frag  explode.geom  grass.frag  grass.vert  light.frag  light.vert  lightfrag.frag  lightvertex.vert  normals.frag  normals.vert  outline.frag  outline.vert  quad.frag  quad.vert  shadow_map.vert  single_color.vert  skybox.frag  skybox.vert  tangents.geom  tangents.vert  unlit_default.frag  unlit_default.vert
engine/shaders/editor/: gizmo_line.vert  grid.frag  grid.vert  imgui.frag  imgui.vert  outline_mix.frag
engine/shaders/postprocessing/: fxaa.frag  gamma_correction.frag  postprocess_vertex.vert
engine/source/: CMakeLists.txt  build_config.hpp  component_serialization_funcs.hpp  dll_build_config.hpp  engine.cpp  engine.hpp  engine_main.cpp  engine_main.hpp  main.cpp  module_loader.cpp  module_loader.hpp  subsystem_forward_declarations.hpp
engine/source/core/: CMakeLists.txt  coremacrodefinitions.hpp
engine/source/private/: CMakeLists.txt
engine/source/public/: CMakeLists.txt  build_config.hpp  engine.cpp  engine.hpp  main.cpp  module_loader.cpp  module_loader.hpp
engine/source/scripts/: CMakeLists.txt  camera_movement.cpp  camera_movement.hpp  debug_hotkeys.cpp  debug_hotkeys.hpp
engine/source/shaders/: CMakeLists.txt
engine/tools/: CMakeLists.txt
engine/tools/codegen/: component_serialization_generator.cpp
glad/: CMakeLists.txt
stb/: CMakeLists.txt
stb/include/stb/: stb_image.hpp
stb/source/: stb_image.c
(+647 files in other folders)
